--- a/public/style.css
+++ b/public/style.css
@@ -5,7 +5,8 @@ h3 {
 header {
   text-align: center;
   background-color: black;
-  color: rgb(247, 247, 247);
+  color: rgb(239, 245, 245);
+  padding: 20px;
 }
 h1 {
   text-align: center;
@@ -24,12 +25,32 @@ img {
   width: 800px;
 }
 
+#subject {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 400px;
+}
+
 footer {
   text-align: center;
 }
 
 nav {
   background-color: rgb(239, 245, 245);
+  text-align: center;
   padding: 4px;
   padding: 4px;
+}
+
+#link {
+  color: rgb(239, 245, 245);
+  text-decoration: none;
+  letter-spacing: 1.5px;
+}
+
+#page {
+  text-decoration: none;
+  padding: 5px;
+  color: rgb(11, 27, 27);
 }
