--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,55 @@ h3 {
   text-align: center;
 }
 
+.logo {
+  background-color: rgb(100, 116, 125);
+  color: rgb(255, 255, 255);
+  font-family: sans-serif;
+  text-align: center;
+  padding: 12.5px;
+  font-size: 1.5rem;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+}
+
+.image_container {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-evenly;
+  text-align: center;
+  padding: 10px;
+}
+
+.img_container img {
+  border: 0;
+  margin: 10px;
+}
+
+.navbar_section {
+  background-color: rgba(192, 183, 183, 0.875);
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  gap: 0.5rem;
+  width: 100%;
+  padding: 0.6rem;
+}
+
+.pages {
+  padding: 25px;
+  color: rgb(3, 3, 2);
+  font-weight: 200;
+  font-family: sans-serif;
+  margin: 0 10px;
+}
+
 header {
   text-align: center;
   background-color: black;
