--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,97 @@ h3 {
   text-align: center;
 }
 
+body {
+  height: 90rem;
+  margin: 0;
+  text-align: left;
+  font-family: Helvetica;
+}
+.header-container {
+  width: 100%;
+  height: 80vh;
+  background-image: url(happy_sisters.jpg);
+  background-repeat: no-repeat;
+  background-size: 78rem 48rem;
+  /* background-size: contain; */
+  background-size: cover;
+  background-position: top center;
+  background-attachment: fixed;
+}
+.desktop-header {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  height: 20vh;
+  width: 100%;
+  justify-content: center;
+}
+
+.desktop-header .content {
+  display: flex;
+
+  height: 100%;
+  justify-content: space-between;
+
+  margin: auto;
+
+  padding: 0 3rem;
+  width: 100%;
+}
+.desktop-header .content .left {
+  align-items: center;
+  display: flex;
+  padding-bottom: 0.5rem;
+  flex-grow: 1;
+}
+
+.desktop-header .content .right {
+  align-items: center;
+  display: flex;
+  flex-grow: 1;
+
+  justify-content: flex-end;
+}
+.header-title {
+  margin-right: 3rem;
+}
+
+.desktop-header .content .right a {
+  text-transform: uppercase;
+}
+.courses-button {
+  padding-right: 1rem;
+  padding-left: 2rem;
+  padding-bottom: 0.5rem;
+}
+.home {
+  padding-right: 1rem;
+  padding-left: 2rem;
+  padding-bottom: 0.5rem;
+}
+.about {
+  padding-right: 1rem;
+  padding-left: 1rem;
+  padding-bottom: 0.5rem;
+}
+.contact {
+  padding-right: 1rem;
+  padding-left: 1rem;
+  padding-bottom: 0.5rem;
+}
+
+.intro {
+  margin: 10px;
+
+  font-size: 1.5rem;
+  font-family: "Times New Roman", Times, serif;
+  background-image: linear-gradient(
+    105deg,
+    rgba(0, 249, 255, 1) 39%,
+    rgba(51, 56, 57, 1) 60%
+  );
+}
+
 .logo {
   background-color: rgb(100, 116, 125);
   color: rgb(255, 255, 255);
